=================
Changes for Crate
=================

Unreleased
==========

 - Fixed the issue which causes overloading of the first configured node in
   the cluster when multiple clients connections are established

 - Fix: Crate won't start properly if a plugin loading error occurs
   (e.g. through a misconfigured plugin)

 - Updated crate-admin to 0.14.7 which includes following changes:

   - fixed a bug that displays partitions that are not related to the selected
     table in the table-list.

   - fixed a bug where cluster shows wrong state if the number of nodes gets
     smaller than the minimum master nodes.

2015/10/09 0.51.6
=================

 - Fix check if setting is settable/resettable on runtime for nested settings

 - Exposed missing cluster gateway settings

 - Throw an exception when someone attempts to change non-runtime changeable
   settings

 - Fixed a race condition that could cause COPY FROM operations to get stuck if
   shards were to be relocated.

 - Fixed a race condition that could cause the re-creation of an already
   existing table partition and therefore potential dataloss when creating
   a lot of partitions simultaniously using COPY FROM or bulk inserts.

2015/10/07 0.51.5
=================

 - Updated crate-admin to 0.14.6 which includes following changes:

   - fixed a visual bug that let an item in the node/table list partly disappear
     if scrolling gets enabled

   - fixed URL to download in dropdown that notifies about old Crate version

   - fixed a bug that displays a zero value as NULL value

 - Fixed a bug in SHOW CREATE TABLE statement that leads to a wrong table
   schema if the table contains nested objects

 - Fix: Prevent NPE in COPY FROM and INSERT FROM SUBQUERY queries
   when newly created shards are not available yet

 - Fixed an issue that causes a ClosedChannelException during BLOB download

 - Fixed a bug that causes a NaN response on _score system column in select