@@ -5,6 +5,9 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Fixed an issue that was causing like queries to fail if using a special regex 
+   character
+
  - Fixed the issue which causes overloading of the first configured node in
    the cluster when multiple clients connections are established
 
